# drf-system-setting

./: .bumpversion.cfg  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
docs/: api.md  installation.md  usage.md
drf_system_setting/: apps.py  choices.py  pyproject.toml  serializers.py  urls.py  views.py
drf_system_setting/core/: models.py  serializers.py
drf_system_setting/migrations/: 0001_initial.py
drf_system_setting/models/: __init__.py  dict.py  menu.py
tests/: __init__.py  test_drf_system_setting.py
