[tool.poetry]
name = "drf-system-setting"
version = "0.1.0"
description = "System setting module for drf project"
authors = ["Leslie Chan <leslie_chan@wochacha.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "drf_system_setting"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
